# llvm-ir

./: .gitmodules  README.md
brainf/: CMakeLists.txt  brainf.cpp  context.hpp  globals.hpp  handcrafted.cpp  jit.hpp  llvm.hpp  ops.hpp
exceptions/: try_catch.ll
high-level-constructs/: virtual-method.cpp  virtual-method.ll
mal/: cond.ll  def.ll
misc/: CMakeLists.txt  tuple.cpp
shadow-stack-gc/: .gitignore  Makefile  README.md  gc.ll  intr.cpp
